CSS - background cover
Created a custom class for background covers to fit the size of the parent element without repeating themselves

--- a/core/statics/css/custom.css
+++ b/core/statics/css/custom.css
@@ -2,3 +2,9 @@
     max-width: 475px;
     margin: 0 auto;
   }
+
+  .bg-cover {
+    background-size: contain !important;
+    background-position: center;
+    background-repeat: no-repeat;
+}
