--- a/core/templates/registration/logged_out.html
+++ b/core/templates/registration/logged_out.html
@@ -3,7 +3,7 @@
 
 {% block header_content %}
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url({% static 'img/login.jpg' %})">
+  <header class="masthead bg-cover" style="background-image: url({% static 'img/logout.svg' %}); height:80vh;">
     <div class="container position-relative px-4 px-lg-5">
       <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-10 col-lg-8 col-xl-7">
