--- a/core/templates/blog/index.html
+++ b/core/templates/blog/index.html
@@ -1,82 +1,49 @@
 {% extends 'base.html' %}
 {% load static %}
 
-
 {% block header_content %}
-    <!-- Page Header-->
-    <header class="masthead" style="background-image: url({% static 'img/home-bg.jpg' %})">
-        <div class="container position-relative px-4 px-lg-5">
-            <div class="row gx-4 gx-lg-5 justify-content-center">
-                <div class="col-md-10 col-lg-8 col-xl-7">
-                    <div class="site-heading">
-                        <h1>Ink Impressions</h1>
-                        <span class="subheading">A Blog For Special Tastes</span>
-                    </div>
-                </div>
-            </div>
+  <!-- Page Header -->
+  <header class="masthead" style="background-image: url({% static 'img/home-bg.jpg' %})">
+    <div class="container position-relative px-4 px-lg-5">
+      <div class="row gx-4 gx-lg-5 justify-content-center">
+        <div class="col-md-10 col-lg-8 col-xl-7">
+          <div class="site-heading">
+            <h1>Ink Impressions</h1>
+            <span class="subheading">A Blog For Special Tastes</span>
+          </div>
         </div>
-    </header>
-{% endblock header_content %}
-    
+      </div>
+    </div>
+  </header>
+{% endblock %}
 
 {% block main_content %}
   <!-- Main Content -->
   <div class="container px-4 px-lg-5">
-    <div class="row gx-4 gx-lg-5 justify-content-center">
+    <div class="row gx-2 gx-lg-3 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
-        <!-- Post preview -->
-        <div class="post-preview">
-          <a href="post.html">
-            <h2 class="post-title">Man must explore, and this is exploration at its greatest</h2>
-            <h3 class="post-subtitle">Problems look mighty small from 150 miles up</h3>
-          </a>
-          <p class="post-meta">
-            Posted by
-            <a href="#!">Start Bootstrap</a>
-            on September 24, 2023
-          </p>
-        </div>
-        <!-- Divider -->
-        <hr class="my-4" />
-        <!-- Post preview -->
-        <div class="post-preview">
-          <a href="post.html"><h2 class="post-title">I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.</h2></a>
-          <p class="post-meta">
-            Posted by
-            <a href="#!">Start Bootstrap</a>
-            on September 18, 2023
-          </p>
-        </div>
-        <!-- Divider -->
-        <hr class="my-4" />
-        <!-- Post preview -->
-        <div class="post-preview">
-          <a href="post.html">
-            <h2 class="post-title">Science has not yet mastered prophecy</h2>
-            <h3 class="post-subtitle">We predict too much for the next year and yet far too little for the next ten.</h3>
-          </a>
-          <p class="post-meta">
-            Posted by
-            <a href="#!">Start Bootstrap</a>
-            on August 24, 2023
-          </p>
-        </div>
-        <!-- Divider -->
-        <hr class="my-4" />
-        <!-- Post preview -->
-        <div class="post-preview">
-          <a href="post.html">
-            <h2 class="post-title">Failure is not an option</h2>
-            <h3 class="post-subtitle">Many say exploration is part of our destiny, but it’s actually our duty to future generations.</h3>
-          </a>
-          <p class="post-meta">
-            Posted by
-            <a href="#!">Start Bootstrap</a>
-            on July 8, 2023
-          </p>
-        </div>
-        <!-- Divider -->
-        <hr class="my-4" />
+        {% for post in posts %}
+          <!-- Post preview -->
+          <div class="row">
+            <div class="col-3 d-flex align-items-center justify-content-center">
+              <img src="{{ post.image.url }}" alt="{{ post.title }}" class="img-fluid w-100" />
+            </div>
+            <div class="post-preview col-9">
+              <a href="post.html">
+                <h2 class="post-title">{{ post.title|title }}</h2>
+                <h3 class="post-subtitle">{{ post.content|truncatewords:20 }}</h3>
+              </a>
+              <p class="post-meta">
+                Posted by
+                <a href="#!">{{ post.author.username }}</a>
+                on {{ post.published_at|date:'d M Y' }}
+              </p>
+            </div>
+          </div>
+          <!-- Divider -->
+          <hr class="my-4" />
+        {% endfor %}
+
         <!-- Pager -->
         <div class="d-flex justify-content-end mb-4">
           <a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a>
@@ -84,4 +51,4 @@
       </div>
     </div>
   </div>
-{% endblock main_content %}
+{% endblock %}
