--- a/core/templates/blog/index.html
+++ b/core/templates/blog/index.html
@@ -26,10 +26,12 @@
           <!-- Post preview -->
           <div class="row">
             <div class="col-3 d-flex align-items-center justify-content-center">
-              <img src="{{ post.image.url }}" alt="{{ post.title }}" class="img-fluid w-100" />
+              <a href="{% url 'blog:post-detail' post.slug %}">
+                <img src="{{ post.image.url }}" alt="{{ post.title }}" class="img-fluid w-100 fit-image" />
+              </a>
             </div>
             <div class="post-preview col-9">
-              <a href="post.html">
+              <a href="{% url 'blog:post-detail' post.slug %}">
                 <h2 class="post-title">{{ post.title|title }}</h2>
                 <h3 class="post-subtitle">{{ post.content|truncatewords:20 }}</h3>
               </a>
