--- a/core/statics/css/custom.css
+++ b/core/statics/css/custom.css
@@ -14,3 +14,9 @@
   height: 100%;
   object-fit: cover; /* or 'contain' depending on the desired effect */
 }
+
+.header-image {
+  max-height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
