--- a/core/templates/blog/index.html
+++ b/core/templates/blog/index.html
@@ -33,13 +33,17 @@
             <div class="post-preview col-9">
               <a href="{% url 'blog:post-detail' post.slug %}">
                 <h2 class="post-title">{{ post.title|title }}</h2>
-                <h3 class="post-subtitle">{{ post.content|truncatewords:20 }}</h3>
+                <h3 class="post-subtitle">{{ post.content|truncatewords:15 }}</h3>
               </a>
               <p class="post-meta">
                 Posted by
-                <a href="#!">{{ post.author.username }}</a>
+                <a href="{% url 'blog:author' author_username=post.author.username %}">{{ post.author.username }}</a>
                 on {{ post.published_at|date:'d M Y' }}
+                
+                {% if post.category %}
                 <a href="{% url 'blog:category' cat_slug=post.category.slug %}" class="badge rounded-pill text-bg-secondary">{{ post.category.name }}</a>
+                {% endif %}
+                  
               </p>
             </div>
           </div>
