--- a/core/templates/blog/index.html
+++ b/core/templates/blog/index.html
@@ -10,6 +10,13 @@
           <div class="site-heading">
             <h1>Ink Impressions</h1>
             <span class="subheading">A Blog For Special Tastes</span>
+            <form class="form-control form-control-lg bg-transparent border-0 mt-5" action="{% url 'blog:search' %}" method="get">
+              <input class="form-control form-control-lg rounded-pill" type="text" name="search" id="search-bar" placeholder="looking for something?">
+            </form>
+            <h3 class="d-inline-block bg-secondary rounded-pill p-4 mt-5">
+              <i class="bi bi-arrow-down-circle"></i>
+              {{ page_title|title }}
+            </h3>
           </div>
         </div>
       </div>
