feat: blog index template - added pagination section
Added pagination section to let users explore different pages and see older blog posts

--- a/core/templates/blog/index.html
+++ b/core/templates/blog/index.html
@@ -48,7 +48,7 @@
                 on {{ post.published_at|date:'d M Y' }}
                 
                 {% if post.category %}
-                <a href="{% url 'blog:category' cat_slug=post.category.slug %}" class="badge rounded-pill text-bg-secondary">{{ post.category.name }}</a>
+                <a href="{% url 'blog:category' cat_slug=post.category.slug %}" class="badge rounded-pill text-bg-secondary ms-2">{{ post.category.name }}</a>
                 {% endif %}
                   
               </p>
@@ -59,8 +59,24 @@
         {% endfor %}
 
         <!-- Pager -->
-        <div class="d-flex justify-content-end mb-4">
-          <a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a>
+        <div class="d-flex justify-content-center mb-4">
+          <div class="pagination">
+            <span class="step-links">
+                {% if page_obj.has_previous %}
+                    <a class="btn btn-primary p-3 text-uppercase rounded-pill" href="?page=1">&laquo; first</a>
+                    <a class="btn btn-primary p-3 text-uppercase rounded-pill me-2" href="?page={{ page_obj.previous_page_number }}">previous</a>
+                {% endif %}
+        
+                <span class="current">
+                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+                </span>
+        
+                {% if page_obj.has_next %}
+                    <a class="btn btn-primary p-3 text-uppercase rounded-pill ms-2" href="?page={{ page_obj.next_page_number }}">next</a>
+                    <a class="btn btn-primary p-3 text-uppercase rounded-pill" href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                {% endif %}
+            </span>
+        </div>
         </div>
       </div>
     </div>
