--- a/core/templates/blog/post.html
+++ b/core/templates/blog/post.html
@@ -8,7 +8,7 @@
       <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-10 col-lg-8 col-xl-7">
           <a href="{% url 'blog:index' %}" class="btn btn-outline-light mb-2 rounded">
-            <i class="bi bi-arrow-left"></i> Return Back
+            <i class="bi bi-arrow-left"></i> Return Home
           </a>
           <img class="header-image" src="{{ post.image.url }}" alt="{{ post.title }}">
           <div class="post-heading">
@@ -38,4 +38,12 @@
       </div>
     </div>
   </article>
+  <hr class="mb-4 mt-0">
+  <div class="d-flex justify-content-center mb-4">
+    <div class="d-block">
+      <a href="{% url 'blog:index' %}" class="btn btn-outline-primary rounded fs-5">
+        <i class="bi bi-arrow-left"></i> Return Home
+      </a>
+    </div>
+  </div>
 {% endblock %}
