style: updated base template navigation bar scroll style color
provided a dark color to better distinguish the navigation bar from other template components while scrolling

--- a/core/statics/css/styles.css
+++ b/core/statics/css/styles.css
@@ -10641,8 +10641,8 @@ blockquote {
     position: fixed;
     top: -83px;
     transition: transform 0.2s;
-    border-bottom: 1px solid white;
-    background-color: rgba(255, 255, 255, 0.9);
+    border-bottom: 1px solid rgba(183, 183, 183, 0.9);
+    background-color: rgba(183, 183, 183, 0.9);
   }
   #mainNav.is-fixed .navbar-brand {
     color: #212529;
