--- a/core/templates/blog/index.html
+++ b/core/templates/blog/index.html
@@ -35,32 +35,36 @@
     <div class="row gx-2 gx-lg-3 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
         {% for post in posts %}
-          <!-- Post preview -->
-          <div class="row">
-            <div class="col-3 d-flex align-items-center justify-content-center">
-              <a href="{% url 'blog:post-detail' post.slug %}">
-                <img src="{{ post.image.url }}" alt="{{ post.title }}" class="img-fluid w-100 fit-image" />
-              </a>
-            </div>
-            <div class="post-preview col-9">
-              <a href="{% url 'blog:post-detail' post.slug %}">
-                <h2 class="post-title">{{ post.title|title }}</h2>
-                <h3 class="post-subtitle">{{ post.content|truncatewords:15 }}</h3>
-              </a>
-              <p class="post-meta">
-                Posted by
-                <a href="{% url 'blog:author' author_username=post.author.username %}">{{ post.author.username }}</a>
-                on {{ post.published_at|date:'d M Y' }}
-                
-                {% if post.category %}
-                <a href="{% url 'blog:category' cat_slug=post.category.slug %}" class="badge rounded-pill text-bg-secondary ms-2">{{ post.category.name }}</a>
-                {% endif %}
-                  
-              </p>
+        <!-- Post preview -->
+        <div class="card mb-3">
+          <div class="row g-0">
+            <div class="col-md-4">
+                <a href="{% url 'blog:post-detail' post.slug %}">
+                  <img class="img-fluid rounded-start h-100" src="{{ post.image.url }}" alt="{{ post.title }}">
+                </a>
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <a href="{% url 'blog:post-detail' post.slug %}">
+                    <h5 class="card-title fw-bold fs-5">{{ post.title|title }}</h5>
+                    <p class="card-text fw-lighter fs-6 mt-3">{{ post.content|truncatewords:15 }}</p>
+                  </a>
+                  <p class="card-text">
+                    <small class="text-body-secondary">
+                    Posted by
+                    <a href="{% url 'blog:author' author_username=post.author.username %}">{{ post.author.username }}</a>
+                    on {{ post.published_at|date:'d M Y' }}
+                  </small>
+                  {% if post.category %}
+                  <a href="{% url 'blog:category' cat_slug=post.category.slug %}" class="badge rounded-pill text-bg-secondary ms-2 text-decoration-none fw-italic">
+                    {{ post.category.name }}
+                  </a>
+                  {% endif %}
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
-          <!-- Divider -->
-          <hr class="my-4" />
         {% endfor %}
 
         <!-- Pager -->
