--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -20,10 +20,15 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
+        <style>
+            #navbar {
+                transition: top 0.3s ease-in-out;
+            }            
+        </style>
     </head>
     <body>
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg fixed-top" style="background-color: #ffffff91;">
+        <nav id="navbar" class="navbar navbar-expand-lg fixed-top" style="background-color: #d7d7d7;">
             <div class="container-fluid">
                 <a class="navbar-brand ms-2" href="{% url 'blog:index' %}">Ink Impressions</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg" aria-label="Toggle navigation">
@@ -109,5 +114,26 @@
 
         <!-- Core theme JS-->
         <script src="{% static 'js/scripts.js' %}"></script>
+
+        <!-- Custom scripts - navbar hide and show -->
+        <script>
+            document.addEventListener("DOMContentLoaded", function() {
+                var navbar = document.getElementById("navbar");
+                var lastScrollTop = 0;
+        
+                window.addEventListener("scroll", function() {
+                    var scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+                    if (scrollTop > lastScrollTop) {
+                        // Scroll down - hide the navbar
+                        navbar.style.top = "-120px";
+                    } else {
+                        // Scroll up - show the navbar
+                        navbar.style.top = "0";
+                    }
+                    lastScrollTop = scrollTop;
+                });
+            });
+        </script>
+        
     </body>
 </html>
