--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -41,14 +41,14 @@
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4 active" href="{% url 'blog:index' %}">Home</a></li>
+                            <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4 {% if request.path == '/' %} active {% endif %}" href="{% url 'blog:index' %}">Home</a></li>
                             {% if request.user.is_authenticated %}
-                            <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'blog:post-publish' %}">Publish a Post</a></li>
-                            <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'accounts:profile' request.user.profile.username %}">Profile</a></li>
+                            <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4 {% if request.path == '/post-publish/' %} active {% endif %}" href="{% url 'blog:post-publish' %}">Publish a Post</a></li>
+                            <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4 {% if '/profile/' in request.path %} active {% endif %}" href="{% url 'accounts:profile' request.user.profile.username %}">Profile</a></li>
                             <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'accounts:logout' %}">logout</a></li>
                             {% else %}
-                            <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'accounts:login' %}">login</a></li>
-                            <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'accounts:register' %}">Register</a></li>
+                            <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4 {% if '/login/' in request.path %} active {% endif %}" href="{% url 'accounts:login' %}">login</a></li>
+                            <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4 {% if '/register/' in request.path %} active {% endif %}" href="{% url 'accounts:register' %}">Register</a></li>
                             {% endif %}
                         </ul>
                         <form class="d-flex my-2" role="search" action="{% url 'blog:search' %}" method="get">
