feat: base template - added custom_scripts block
this block will be used for providing supplementary scripts based on the templates which inherit from the base template

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -91,6 +91,9 @@
             {% endif %}
         </div>
 
+        
+        {% block custom_scripts %} {% endblock custom_scripts %}
+
         <!-- Toasts Script -->
         <script>
             document.addEventListener('DOMContentLoaded', function () {
