--- a/core/templates/registration/profile.html
+++ b/core/templates/registration/profile.html
@@ -45,7 +45,7 @@
               <label for="floatingInput">Last Name</label>
             </div>
             <div class="form-floating rounded-5">
-              <textarea class="form-control" id="bio" name="bio" placeholder="tell others about yourself">{{ profile.bio }}</textarea>
+              <textarea class="form-control" id="bio" name="bio" placeholder="tell others about yourself">{% if profile.bio %}{{ profile.bio }}{% else %}{% endif %}</textarea>
               <label for="floatingInput">Bio</label>
             </div>
             <div class="form-floating rounded-5">
