--- a/core/templates/registration/logged_out.html
+++ b/core/templates/registration/logged_out.html
@@ -3,16 +3,17 @@
 
 {% block header_content %}
   <!-- Page Header -->
-  <header class="masthead bg-cover" style="background-image: url({% static 'img/logout.svg' %}); height:80vh;">
-    <div class="container position-relative px-4 px-lg-5">
-      <div class="row gx-4 gx-lg-5 justify-content-center">
-        <div class="col-md-10 col-lg-8 col-xl-7">
-          <div class="page-heading">
-            <h1>See You Later</h1>
-            <span class="subheading">
-              You have logged out. <br /> <a href="{% url 'accounts:login' %}" class="fs-3">login</a> again to manage your posts!
-            </span>
-          </div>
+  <div class="container h-25 w-25  mt-5">
+    <img src="{% static 'img/logout.svg' %}" alt="logout">
+  </div>
+  <header class="container px-4 px-lg-5 mb-4">
+    <div class="row gx-4 gx-lg-5 justify-content-center">
+      <div class="col-md-10 col-lg-8 col-xl-7">
+        <div class="page-heading text-center">
+          <h1>See You Later</h1>
+          <span class="subheading">
+            You have logged out. <br /> <a href="{% url 'accounts:login' %}" class="fs-4 text-decoration-underline">login</a> again to manage your posts!
+          </span>
         </div>
       </div>
     </div>
