fix: blog post_list partial - included link to viewing pending or rejected post details
included some conditions based on the post published_status to provide a link which enables users to see a preview of their posts details

--- a/core/templates/blog/partials/post_list.html
+++ b/core/templates/blog/partials/post_list.html
@@ -1,13 +1,15 @@
 <!-- Post list -->
 <div class="d-flex flex-column justify-content-center align-items-center">
 {% for post in posts %}
-    <div class="card" style="width: 18rem;">
-        <a href="{% url 'blog:post-detail' post.slug %}">
-        <img src="{{ post.image.url }}" class="card-img-top" alt="{{ post.title }}">
+    <div class="card mt-2">
+        <a href="{% if post.published_status == True %}{% url 'blog:post-detail' post.slug %}{%else%}{% url 'blog:user-post-detail' post.slug %}{% endif %}">
+            <img src="{{ post.image.url }}" class="card-img-top" alt="{{ post.title }}" style="max-height: 250px;">
         </a>
         <div class="card-body">
-        <h5 class="card-title">{{ post.title|title }}</h5>
-        <p class="card-text my-0">{{ post.content|truncatewords:15 }}</p>
+            <a href="{% if post.published_status == True %}{% url 'blog:post-detail' post.slug %}{%else%}{% url 'blog:user-post-detail' post.slug %}{% endif %}">
+                <h5 class="card-title">{{ post.title|title }}</h5>
+                <p class="card-text my-0">{{ post.content|truncatewords:15 }}</p>
+            </a>
         <p class="card-text my-2">
             <small class="text-body-secondary">
             Posted on {{ post.published_at|date:'d M Y' }}
