--- a/core/templates/blog/user_posts.html
+++ b/core/templates/blog/user_posts.html
@@ -21,27 +21,29 @@
   <div class="container px-2">
     <div class="row gx-3 justify-content-center">
 
-
+      <!-- Published Posts -->
       <div class="col">
         <p class="border-bottom border-3 border-success w-100 text-center fs-3 fw-bold mt-0 mb-2">Published Posts</p>
-        <!-- Published Posts -->
         {% filter_user_posts status=True %}
       </div>
+      <!-- Published Posts End -->
       
+      <!-- Pending Posts -->
       <div class="col">
         <p class="border-bottom border-3 border-warning w-100 text-center fs-3 fw-bold mt-0 mb-2">Pending Posts</p>
-        <!-- Pending Posts -->
         {% filter_user_posts status=None %}
       </div>
+      <!-- Pending Posts End -->
       
+      <!-- Rejected Posts -->
       <div class="col">
         <p class="border-bottom border-3 border-danger w-100 text-center fs-3 fw-bold mt-0 mb-2">Rejected Posts</p>
-        <!-- Rejected Posts -->
         {% filter_user_posts status=False %}
       </div>
+      <!-- Rejected Posts End -->
 
       {% if not is_home %}
-        <div class="d-flex justify-content-center mb-4">
+        <div class="d-flex justify-content-center my-4">
           <div class="d-block">
             <a href="{% url 'blog:index' %}" class="btn btn-outline-primary rounded fs-5">
               <i class="bi bi-arrow-left"></i> Return to Recent Posts
