--- a/core/templates/blog/partials/post_list.html
+++ b/core/templates/blog/partials/post_list.html
@@ -33,6 +33,16 @@
             {% endif %}
             </span>
         </div>
+        <div class="d-flex justify-content-center mt-2">
+            <button 
+                class="btn btn-outline-danger"
+                data-bs-toggle="modal"
+                data-bs-target="#deleteModal"
+                data-post-slug="{{ post.slug }}"
+                data-post-title="{{ post.title }}">
+                Delete
+            </button>
+        </div>
         </div>
     </div>
 {% endfor %}
