--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -30,7 +30,7 @@
         <!-- Navigation-->
         <nav id="navbar" class="navbar navbar-expand-lg fixed-top" style="background-color: #d7d7d7;">
             <div class="container-fluid">
-                <a class="navbar-brand ms-2" href="{% url 'blog:index' %}">Ink Impressions</a>
+                <a class="navbar-brand ms-2 fw-bold fst-italic fs-3" href="{% url 'blog:index' %}">Ink Impressions</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
