--- a/core/templates/registration/register.html
+++ b/core/templates/registration/register.html
@@ -19,8 +19,8 @@
 
 {% block main_content %}
   <!-- Main Content -->
-  <main class="container w-50 mb-4">
-
+<main class="container mb-4 d-flex justify-content-center">
+  <div class="col-md-9 col-lg-7 col-xl-6">
     {% if form.errors %}
       {% for field in form %}
       {% if field.errors %}
@@ -61,5 +61,6 @@
         Already Have an account? <a href="{% url 'accounts:login' %}">Login</a> here.
       </p>
     </form>
-  </main>
+  </div>
+</main>
 {% endblock main_content %}
