--- a/core/templates/blog/partials/post_list.html
+++ b/core/templates/blog/partials/post_list.html
@@ -35,6 +35,14 @@
         </div>
         <div class="d-flex justify-content-center mt-2">
             <button 
+                class="btn btn-outline-primary me-3"
+                data-bs-toggle="modal"
+                data-bs-target="#editModal"
+                data-post-slug="{{ post.slug }}"
+                data-post-title="{{ post.title }}">                
+                Edit
+            </button>
+            <button 
                 class="btn btn-outline-danger"
                 data-bs-toggle="modal"
                 data-bs-target="#deleteModal"
