feat: blog user_posts template - included edit-post-modal component
included edit-post-modal component in the user_posts template which is going to be used for getting user's confirmation before proceeding to the post_edit template

--- a/core/templates/blog/user_posts.html
+++ b/core/templates/blog/user_posts.html
@@ -58,4 +58,7 @@
 <!-- Post Delete Modal -->
 {% include "includes/delete-post-modal.html" %}
 
+<!-- Post Edit Modal -->
+{% include "includes/edit-post-modal.html" %}
+
 {% endblock %}
