--- a/core/templates/blog/index.html
+++ b/core/templates/blog/index.html
@@ -40,7 +40,7 @@
           <div class="row g-0">
             <div class="col-md-4">
                 <a href="{% url 'blog:post-detail' post.slug %}">
-                  <img class="img-fluid rounded-start h-100" src="{{ post.image.url }}" alt="{{ post.title }}">
+                  <img class="img-fluid rounded-start h-100 w-100" src="{{ post.image.url }}" alt="{{ post.title }}">
                 </a>
               </div>
               <div class="col-md-8">
