fix: blog post template - not showing comment form for unpublished posts
added new conditions in order not to show comment form for not published blog posts

--- a/core/templates/blog/post.html
+++ b/core/templates/blog/post.html
@@ -38,6 +38,7 @@
       </div>
     </div>
   </article>
+  {% if post.published_status %}
   <hr class="my-2 mt-0">
   <div class="container px-4 px-lg-5 mb-3">
     <div class="row gx-4 gx-lg-5 justify-content-center">
@@ -64,6 +65,7 @@
       </div>
     </div>
   </div>
+  {% endif %}
   <hr class="my-3 mt-0">
   <div class="d-flex justify-content-center mb-4">
     <div class="d-block">
