feat: blog post template - added return to user posts link for unpublished posts
included a new condition to provide return to user posts template when visiting pending or reject blog posts instead of showing a return home link

--- a/core/templates/blog/post.html
+++ b/core/templates/blog/post.html
@@ -7,9 +7,15 @@
     <div class="container position-relative px-4 px-lg-5">
       <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-10 col-lg-8 col-xl-7">
+          {% if post.published_status %}
           <a href="{% url 'blog:index' %}" class="btn btn-outline-light mb-2 rounded">
             <i class="bi bi-arrow-left"></i> Return Home
           </a>
+          {% else %}
+          <a href="{% url 'blog:user-posts' %}" class="btn btn-outline-light mb-2 rounded">
+            <i class="bi bi-arrow-left"></i> Return to Your Posts
+          </a>
+          {% endif %}
           <img class="header-image" src="{{ post.image.url }}" alt="{{ post.title }}">
           <div class="post-heading">
             <h1>{{ post.title|title }}</h1>
@@ -69,9 +75,15 @@
   <hr class="my-3 mt-0">
   <div class="d-flex justify-content-center mb-4">
     <div class="d-block">
+      {% if post.published_status %}
       <a href="{% url 'blog:index' %}" class="btn btn-outline-primary rounded fs-5">
         <i class="bi bi-arrow-left"></i> Return Home
       </a>
+      {% else %}
+      <a href="{% url 'blog:user-posts' %}" class="btn btn-outline-primary rounded fs-5">
+        <i class="bi bi-arrow-left"></i> Return to Your Posts
+      </a>
+      {% endif %}
     </div>
   </div>
 {% endblock %}
