style: post template - added max for post image width and height
added max-width and max-height properties to blog post images in order to provide better styles for blog post images and preventing out of viewport sizes for images

--- a/core/templates/blog/post.html
+++ b/core/templates/blog/post.html
@@ -16,7 +16,7 @@
             <i class="bi bi-arrow-left"></i> Return to Your Posts
           </a>
           {% endif %}
-          <img class="header-image" src="{{ post.image.url }}" alt="{{ post.title }}">
+          <img class="header-image" src="{{ post.image.url }}" alt="{{ post.title }}" style="max-width: 870px; max-height: 550px;">
           <div class="post-heading">
             <h1>{{ post.title|title }}</h1>
             <span class="meta">
